--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,6 +18,10 @@
 #
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
+#
+#en:
+#  hello: "Hello world"
 
 en:
-  hello: "Hello world"
+  active_admin:
+    powered_by: "Your custom text"
